kuber/2.3/service_n.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-kube-n
spec:
  selector:
    app: netology-kube-n
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
---
