kuber/2.3/service_n_m.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-kube
spec:
  selector:
    app: netology-kube
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool-http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
